--- a/src/app/secure/start-game/start-game.component.html
+++ b/src/app/secure/start-game/start-game.component.html
@@ -21,7 +21,7 @@
             <div class="col-lg-12">
                 <div class="text-center pt-3">
                     <div id="activeInGameNodes">
-                        <app-device-list [config]="activeNodes" (nodeConfigs)="nodeConfigs($event)"></app-device-list>
+                        <app-device-list [config]="activeDevices" (nodeConfigs)="nodeConfigs($event)"></app-device-list>
                         <!-- //(modalClose)="closeModal($event)" [config]="deviceListConfigs" (nodeConfigs)="nodeConfigs($event)" -->
                     </div>
                 </div>
