fix game selection to update devices and cleanup modals

--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -5,7 +5,7 @@
             <div class="modal-header">
                 <h5 *ngIf="mode == 'create'" class="modal-title" id="exampleModalLabel">Configure nodes for this
                     game mode.</h5>
-                <h5 *ngIf="mode == 'active'" class="modal-title" id="exampleModalLabel">Dynamic Game Configurations</h5>
+                <!-- <h5 *ngIf="mode == 'active'" class="modal-title" id="exampleModalLabel">Dynamic Game Configurations</h5> -->
                 <h6 *ngIf="mode == 'active'"> WARNING: Changes will impact live gameplay </h6>
 
                 <button *ngIf="mode == 'active'" type="button" class="btn btn-warning"
