--- a/src/app/secure/start-game/start-game.component.html
+++ b/src/app/secure/start-game/start-game.component.html
@@ -1,7 +1,7 @@
 
 <div class="events_area">
     <div class="container">
-        <div *ngIf="!gameBoardCollapsed" class="row justify-content-center">
+        <div *ngIf="!gameBoardActive" class="row justify-content-center">
             <div class="col-lg-5">
                 <div class="main_title">
                     <h4>Select Game Configuration</h4>
@@ -16,15 +16,26 @@
             </div>
         </div>
 
-        <div class="row collapsible" [@collapse]="!gameBoardCollapsed" id="gameManagementBoard">
+        <div class="row collapsible" [@collapse]="!gameBoardActive" id="gameManagementBoard">
             <div class="col-lg-12"><h4 class="text-center pt-3">{{getSelectedGameModeName()}}</h4></div>
         </div>
 
         <div class="col-lg-12">
             <div class="text-center pt-3">
-                <div id="activeInGameNodes">
+
+                <div class="modal-header" *ngIf="gameBoardActive">
+                    <!-- <h5 *ngIf="mode == 'active'" class="modal-title" id="exampleModalLabel">Dynamic Game Configurations</h5> -->
+                    <h5> WARNING: Changes will impact live gameplay </h5>
+
+                    <button type="button" class="btn btn-warning"
+                        (click)="saveNodeConfigs()">PAUSE GAME</button>
+
+                    <button type="button" class="btn btn-danger"
+                        (click)="endGame()">END GAME</button>
+                </div>
+
+                <div>
                     <app-device-list [config]="activeDevices" (nodeConfigs)="nodeConfigs($event)"></app-device-list>
-                    <!-- //(modalClose)="closeModal($event)" [config]="deviceListConfigs" (nodeConfigs)="nodeConfigs($event)" -->
                 </div>
             </div>
         </div>
