--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -52,9 +52,8 @@
                                             <label class="custom-control-label" [for]="'querySwitch-' + i">Player Query</label>
                                         </div>
                                     </div>
-
-
-                                    <div class="form-group">
+ 
+                                    <div *ngIf="teamsAvaliable[0].id" class="form-group">
                                         <div class="custom-control custom-switch">
                                             <input (click)="enableRegister(device)" type="checkbox"
                                                 class="custom-control-input" [id]="'registerSwitch-' + i"
