--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 <!-- <link rel="stylesheet" href="../assets/libs/font-awesome-4.7.0/css/font-awesome.css"> -->
 <!-- <link rel="stylesheet" href="../assets/libs/font-awesome-4.7.0/css/font-awesome.min.css"/> -->
 <router-outlet></router-outlet>
