--- a/src/app/global/map/map.component.html
+++ b/src/app/global/map/map.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="map == 'SALINA GAMBIT'" id="salina_gambit">
+<div *ngIf="mapID == 2" id="salina_gambit">
     <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#"
         xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg"
         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%"
@@ -54,7 +54,7 @@
     </svg>
 </div>
 
-<div *ngIf="map == 'ballhack'" id="ballhack">
+<div *ngIf="mapID==3" id="ballhack">
     <svg
     xmlns:dc="http://purl.org/dc/elements/1.1/"
     xmlns:cc="http://creativecommons.org/ns#"
