--- a/src/app/secure/mydevices/mydevices.component.html
+++ b/src/app/secure/mydevices/mydevices.component.html
@@ -1,74 +1,64 @@
 <div class="container-fluid">
-    <div *ngIf="!activeGame">
-        <div class="alert alert-primary" role="alert">
-            Start A Game then come back and check it out!
-        </div>
+    <div>
+        <select (change)="selectActiveGame($event)" class="form-control" >
+            <option value="none" selected disabled> -- Select An Active Game -- </option>
+            <option *ngFor="let activeGame of activeGames ; let i = index"  
+                [value]="activeGame.gameConfigID">
+                {{activeGame.id}}
+            </option>
+        </select>
     </div>
     <div *ngIf="activeGame" id="activeGame">
+ 
+        <div class="d-flex align-items-start">
+            <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+              <button (click)="changeGameTab('map')" class="nav-link" id="v-pills-home-tab"  type="button" role="tab"  >Map</button>
+              <button (click)="changeGameTab('team')"  class="nav-link" id="v-pills-profile-tab"  type="button" role="tab"  >Team Score</button>
+              <button (click)="changeGameTab('game')" class="nav-link" id="v-pills-messages-tab"  type="button" role="tab"  >Game Score</button>
+              <button (click)="changeGameTab('live')" class="nav-link" id="v-pills-settings-tab"  type="button" role="tab"  >Live Game Events</button>
+            </div>
+            <div class="tab-content" id="v-pills-tabContent">
+              <div *ngIf="currentTab == 'map'" class="" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+                <div class="pull-md-3">
+                    <div class="card tall"> 
+                        hi
+                        <app-map [mapID]="map"></app-map>
+                    </div>
+                </div>
+              </div>
+              <div *ngIf="currentTab == 'team'" class="tab-pane" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+                <div class="push-md-9 col-md-3">
+                    <div class="row">
+                        <div class="col-md-12 col-4">
+                            <div class="card mb-3">
+                                <div *ngFor="let team of teams" class="row card card-outline-success m-x-auto m-b-2">
+                                    <div class="cust_text text-xs-center p-y-1" [style.background-color]="team.color">
+                                        <h1>{{team.name}}</h1>
+                                    </div>
+                                    <div class="col-md-5 text-xs-center text-success p-y-1">
+                                        <p *ngFor="let player of teams.teamPlayers">
+                                            <a *ngIf="player.is_alive" style="color: green;">{{player.rfidID}}</a>
+                                            <a *ngIf="!player.is_alive" style="color: red;">{{player.rfidID}}</a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+              <div *ngIf="currentTab == 'game'"  class="" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">Thiurd</div>
+              <div *ngIf="currentTab == 'live'"  class="" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">fourth</div>
+            </div>
+          </div>
+       
+       
         <div class="row">
-            <div class="push-md-9 col-md-3">
-                <div class="row">
-                    <div class="col-md-12 col-4">
-                        <div class="card mb-3">
-                            <div class="row card card-outline-success m-x-auto m-b-2">
-                                <div class="cust_text text-xs-center p-y-1" [style.background-color]="teams[0].color">
-                                    <h1>{{teams[0].name}}</h1>
-                                </div>
-                                <div class="col-md-5 text-xs-center text-success p-y-1">
-                                    <p *ngFor="let player of teams[0].teamPlayers">
-                                        <a *ngIf="player.is_alive" style="color: green;">{{player.rfidID}}</a>
-                                        <a *ngIf="!player.is_alive" style="color: red;">{{player.rfidID}}</a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="pull-md-3">
-                <div class="card tall"> 
-                    <app-map></app-map>
-                </div>
-            </div>
-            <div class="push-md-9 col-md-3">
-                <div class="row">
-                    <div class="col-md-12 col-4">
-                        <div class="card mb-3">
-                            <div class="row card card-outline-success m-x-auto m-b-2">
-                                <div class="cust_text text-xs-center p-y-1" [style.background-color]="teams[1].color">
-                                    <h1>{{teams[1].name}}</h1>
-                                </div>
-                                <div class="col-md-5 text-xs-center text-success p-y-1">
-                                    <p *ngFor="let player of teams[1].teamPlayers">
-                                        <a *ngIf="player.is_alive" style="color: green;">{{player.rfidID}}</a>
-                                        <a *ngIf="!player.is_alive" style="color: red;">{{player.rfidID}}</a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
+           
+           
         </div>
-        <div class="row">
-            <div *ngIf="teams[2]" class="push-md-9 col-md-3">
-                <div class="col-md-12 col-4">
-                    <div *ngFor="let team of teams | slice:2; let i = index;" class="card mb-3">
-                        <div class="row card card-outline-success m-x-auto m-b-2">
-                            <div class="cust_text text-xs-center bg-success p-y-1">
-                                <h1>{{team.name}}</h1>
-                            </div>
-                            <div class="col-md-5 text-xs-center text-success p-y-1">
-                                <p *ngFor="let player of team.teamPlayers">
-                                    <a *ngIf="player.is_alive" style="color: green;">{{player.rfidID}}</a>
-                                    <a *ngIf="!player.is_alive" style="color: red;">{{player.rfidID}}</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
     </div>
 
 </div>
