--- a/src/app/global/map/map.component.html
+++ b/src/app/global/map/map.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="mapID == 2" id="salina_gambit">
    <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#"
       xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg"
-      xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%"
+      xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="map"
       viewBox="0 0 210 292" version="1.1" id="svg8">
       <defs id="defs2" />v
       <g id="layer1">
